force-app/main/default/objects/Sales_Volume_Estimation__c/Sales_Volume_Estimation__c.object-meta.xml
<CustomObject>
    <label>Sales Volume Estimation</label>
    <nameField>
        <displayFormat>VE{000000}</displayFormat>
        <label>Sales Volume Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Volume Estimations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>