force-app/main/default/objects/Sales_Volume_Estimation__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sales Volume Estimations</relationshipLabel>
    <relationshipName>Sales_Volume_Estimations</relationshipName>
    <type>Lookup</type>
</CustomField>