force-app/main/default/objects/Sales_Volume_Estimation__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Brand</label>
    <referenceTo>Licensee_Brand__c</referenceTo>
    <relationshipLabel>Sales Volume Estimations</relationshipLabel>
    <relationshipName>Sales_Volume_Estimations</relationshipName>
    <type>Lookup</type>
</CustomField>