force-app/main/default/objects/Sales_Volume_Estimation__c/fields/Conventional__c.field-meta.xml
<CustomField>
    <fullName>Conventional__c</fullName>
    <label>Conventional</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>