force-app/main/default/objects/Sales_Volume_Estimation__c/fields/Conventional_Units__c.field-meta.xml
<CustomField>
    <fullName>Conventional_Units__c</fullName>
    <formula>Conventional__c * Estimate_Volume__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conventional Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>