force-app/main/default/objects/Sales_Volume_Estimation__c/fields/Enlist__c.field-meta.xml
<CustomField>
    <fullName>Enlist__c</fullName>
    <label>Enlist</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>