force-app/main/default/objects/Sales_Volume_Estimation__c/fields/Estimate_Volume__c.field-meta.xml
<CustomField>
    <fullName>Estimate_Volume__c</fullName>
    <label>Estimate Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>