force-app/main/default/objects/Sales_Volume_Estimation__c/fields/GT__c.field-meta.xml
<CustomField>
    <fullName>GT__c</fullName>
    <label>GT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>