force-app/main/default/objects/Sales_Volume_Estimation__c/fields/GT_units__c.field-meta.xml
<CustomField>
    <fullName>GT_units__c</fullName>
    <formula>Estimate_Volume__c * GT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GT units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>