force-app/main/default/objects/Sales_Volume_Estimation__c/fields/LL__c.field-meta.xml
<CustomField>
    <fullName>LL__c</fullName>
    <label>LL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>