force-app/main/default/objects/Sales_Volume_Estimation__c/fields/LL_Units__c.field-meta.xml
<CustomField>
    <fullName>LL_Units__c</fullName>
    <formula>LL__c * Estimate_Volume__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LL Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>