force-app/main/default/objects/Sales_Volume_Estimation__c/fields/LLG27__c.field-meta.xml
<CustomField>
    <fullName>LLG27__c</fullName>
    <label>LLG27</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>