force-app/main/default/objects/Sales_Volume_Estimation__c/fields/LLG27_Units__c.field-meta.xml
<CustomField>
    <fullName>LLG27_Units__c</fullName>
    <formula>Estimate_Volume__c * LLG27__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LLG27 Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>