force-app/main/default/objects/Sales_Volume_Estimation__c/fields/RR2Y__c.field-meta.xml
<CustomField>
    <fullName>RR2Y__c</fullName>
    <label>RR2Y</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>