force-app/main/default/objects/Sales_Volume_Estimation__c/fields/RR2Y_Units__c.field-meta.xml
<CustomField>
    <fullName>RR2Y_Units__c</fullName>
    <formula>Estimate_Volume__c * RR2Y__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RR2Y Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>