force-app/main/default/objects/Sales_Volume_Estimation__c/fields/Subtype__c.field-meta.xml
<CustomField>
    <fullName>Subtype__c</fullName>
    <description>Specifies the estimation.</description>
    <inlineHelpText>Specifies the estimation.</inlineHelpText>
    <label>Subtype</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Royalties 140k</fullName>
            </value>
            <value>
                <fullName>Parent Seed Sales</fullName>
            </value>
            <value>
                <fullName>Acreage</fullName>
            </value>
            <value>
                <fullName>Customer Sales Volume</fullName>
            </value>
            <value>
                <fullName>Localization</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>