force-app/main/default/objects/Sales_Volume_Estimation__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Signifies the kind of estimation that is being captured.</description>
    <inlineHelpText>Signifies the kind of estimation that is being captured.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Budget</fullName>
            </value>
            <value>
                <fullName>Estimate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>