force-app/main/default/objects/Sales_Volume_Estimation__c/fields/Xtend__c.field-meta.xml
<CustomField>
    <fullName>Xtend__c</fullName>
    <label>Xtend</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>