force-app/main/default/objects/Sales_Volume_Estimation__c/fields/XTEND_FLEX_Units__c.field-meta.xml
<CustomField>
    <fullName>XTEND_FLEX_Units__c</fullName>
    <formula>Xtend_Flex__c * Estimate_Volume__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>XTEND FLEX Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>