force-app/main/default/objects/Sales_Volume_Estimation__c/fields/Xtend_Units__c.field-meta.xml
<CustomField>
    <fullName>Xtend_Units__c</fullName>
    <formula>Estimate_Volume__c * Xtend__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Xtend Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>