force-app/main/default/objects/Sales_Volume_Estimation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Brand__c</columns>
    <columns>Season__c</columns>
    <columns>Estimate_Volume__c</columns>
    <columns>Subtype__c</columns>
    <columns>Type__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Subtype__c</field>
        <operation>equals</operation>
        <value>Parent Seed Sales</value>
    </filters>
    <label>All</label>
</ListView>